--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <html>
 <head>
 	<title>Sixth Sem RVITM notes</title>
+	<style>
+		.container {
+			display:inline;
+			align-items: center;
+			justify-content: center;
+			
+		}
+
+		.text {
+			font-size: 2em;
+			font-weight: bold;
+			color: white;
+			text-align: center;
+			margin-bottom: 1em;
+		}
+	</style>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -83,6 +99,11 @@
 			</div>
 		</div>
 	</div>
+</div>
+<div class="container">
+    <div class="text">Cheers by Surya&#129346; </div>
+</div><div class="container">
+    <div class="text">Cheers by Surya&#129346; </div>
 </div>
 </body>
 </html>
