--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Sixth Sem RVITM notes</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 		.container {
 			display:inline;
@@ -46,7 +47,11 @@
 				<a href="wtp.html" class="btn-ppt">PPT</a>
 			</div>
 		</div>
-		<div class="card">
+		<div class="</div><div class="container">
+106
+    <div class="text">Cheers by Surya&#129346; </div>
+107
+</div>card">
 			<h2>Cloud Computing</h2>
 			
 			<div class="buttons">
@@ -101,9 +106,8 @@
 	</div>
 </div>
 <div class="container">
-    <div class="text">Cheers by Surya&#129346; </div>
-</div><div class="container">
-    <div class="text">Cheers by Surya&#129346; </div>
+    <div class="text">Cheers by Surya&#129346; 
 </div>
+
 </body>
 </html>
