--- a/index.html
+++ b/index.html
@@ -47,11 +47,7 @@
 				<a href="wtp.html" class="btn-ppt">PPT</a>
 			</div>
 		</div>
-		<div class="</div><div class="container">
-106
-    <div class="text">Cheers by Surya&#129346; </div>
-107
-</div>card">
+		<div class="card">
 			<h2>Cloud Computing</h2>
 			
 			<div class="buttons">
