--- a/scmn.html
+++ b/scmn.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>SCM</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
 	background-color: #2c2f33;
